added flight table

--- a/module1/templates/index.html
+++ b/module1/templates/index.html
@@ -311,7 +311,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<div class="services-bottom">
 				<div class="counter-agile">
 					<div class="counter-subw3l">
-						<p><a href = "{% url 'home' %}"><i class="fa fa-plane" aria-hidden="true"></i>Travelcation</a></p>
+						<p><a href = "{% url 'module1:home' %}"><i class="fa fa-plane" aria-hidden="true"></i>Travelcation</a></p>
 					</div>
 					<div class="ftr-menu">
 						 <ul>
